# DifferentiableHyperbolicity

./: .gitignore  README.md  benchmark.py  hyperbolicity_results.csv  pyproject.toml  readme.md  setup.py  utils.py
datasets/: D_celegan.pkl
differentiable_hyperbolicity/: delta.py  far_apart_points.py  utils.py
differentiable_hyperbolicity/tree_fitting_methods/: deltazero.py  gromov.py  hccfit.py  hyperbolicity_learning.py  layering_tree.py  neighbor_joining.py  treerep.py
expes/: benchmark.py  grid_search.py
expes/configs/: grid_search.yaml
expes/figures/: delta_approximation.py  figure_paper.ipynb
expes/launch_files/: benchmark.sh  sensibility_analysis.sh
hyperbolicity/: delta.py  far_apart_points.py  hgraph.py  requirements.txt  test.ipynb  utils.py
hyperbolicity.egg-info/: PKG-INFO  SOURCES.txt
hyperbolicity/expes/: analyze_results.ipynb  benchmark.py  benchmark_disease.ipynb  classification.ipynb  delta_approximation.ipynb  delta_approximation.sh  delta_approxmiation.py  delta_properties.ipynb  distribution.ipynb  figure_paper.ipynb  grid_search.py  launch_distance_hyperbolicity_learning.py  loss_curves.ipynb  merge_csv_results.py  read_results.py  results_celegan_gpu_batch_32.py  script_writer.py  script_writer_read_expe.py  sensitivity_analysis.py  single_cell.ipynb  single_cell_classification.ipynb  test.ipynb  toy_dataset.ipynb
hyperbolicity/tests/: local_tests.py  memory_tests.py
hyperbolicity/tree_fitting_methods/: deltazero.py  gromov.py  hccfit.py  hdtree.py  (+7 more)
tree_fitting_methods/: gromov.py  hccfit.py  neighbor_joining.py  treerep.py
(+17 files in other folders)
