[project]
name = "differentiable-hyperbolicity"
version = "1.0.0"
description = "A Python library for computing and optimizing tree metrics using differentiable hyperbolicity. This repository implements various tree fitting methods and provides tools for analyzing graph hyperbolicity."
readme = "README.md"
license = "MIT"
requires-python = "==3.11.2"
dependencies = [
    "tikzplotlib==0.10.1",
    "torch==2.6.0",
    "torch-geometric==2.6.1",
    "webcolors==1.11.1",
    "tqdm==4.67.1",
    "scipy==1.15.2",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "networkx==3.4.2",
    "matplotlib==3.7.1",
    "tabulate==0.9.0",
    "PyYAML==6.0.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"